# gproxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_zh.md  render.yaml  route.md  zeabur.yaml
apps/gproxy/: Cargo.toml
apps/gproxy/frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/gproxy/frontend/src/: App.tsx  index.css  main.tsx
apps/gproxy/frontend/src/components/: JsonBlock.tsx  LoginGate.tsx  Panel.tsx  Sidebar.tsx  StatCard.tsx  Toast.tsx  Topbar.tsx  ui.tsx
apps/gproxy/frontend/src/i18n/: index.tsx  translate.en.json  translate.zh_cn.json
apps/gproxy/frontend/src/lib/: api.ts  credential_import.ts  format.ts  live_usage.ts  provider_schema.ts  types.ts
apps/gproxy/frontend/src/sections/: AboutSection.tsx  BatchSection.tsx  ChannelsSection.tsx  ConfigSection.tsx  CredentialsSection.tsx  DisallowSection.tsx  EventStreamSection.tsx  KeysSection.tsx  LogsSection.tsx  OAuthSection.tsx  OverviewSection.tsx  ProvidersSection.tsx  StatsSection.tsx  UsageSection.tsx  UsersSection.tsx
apps/gproxy/src/: admin.rs  admin_ui.rs  cli.rs  data_dir.rs  dsn.rs  main.rs  snapshot.rs  traffic_sink.rs
crates/gproxy-core/: Cargo.toml
crates/gproxy-core/src/: auth.rs  classify.rs  core.rs  error.rs  handler.rs  lib.rs
crates/gproxy-core/src/bootstrap/: mod.rs
crates/gproxy-core/src/proxy_engine/: dispatch.rs  mod.rs  wire.rs
crates/gproxy-core/src/state/: mod.rs
crates/gproxy-core/src/upstream_client/: mod.rs
crates/gproxy-provider-impl/: Cargo.toml
crates/gproxy-provider-impl/src/: auth_extractor.rs  builtin.rs  client.rs  credential.rs  lib.rs  record.rs  registry.rs  storage.rs  upstream.rs
crates/gproxy-provider-impl/src/dispatch/: mod.rs  plan.rs  record.rs  stream.rs  usage.rs
crates/gproxy-provider-impl/src/dispatch/transform/: json.rs  mod.rs  stream.rs
crates/gproxy-provider-impl/src/provider/: mod.rs
crates/gproxy-provider-impl/src/provider/aistudio/: mod.rs
crates/gproxy-provider-impl/src/provider/antigravity/: mod.rs  oauth.rs  refresh.rs  usage.rs
crates/gproxy-provider-impl/src/provider/claude/: mod.rs
crates/gproxy-provider-impl/src/provider/claudecode/: mod.rs  oauth.rs  refresh.rs  usage.rs
crates/gproxy-provider-impl/src/provider/codex/: instructions.rs  mod.rs  models.json  oauth.rs  refresh.rs  usage.rs
crates/gproxy-provider-impl/src/provider/deepseek/: mod.rs
crates/gproxy-provider-impl/src/provider/geminicli/: mod.rs  models.json  oauth.rs  refresh.rs
crates/gproxy-provider-impl/src/provider/nvidia/: mod.rs  tokenizer.rs
crates/gproxy-provider-impl/src/provider/openai/: mod.rs
crates/gproxy-provider-impl/src/provider/vertex/: mod.rs
crates/gproxy-provider-impl/src/provider/vertexexpress/: mod.rs  models.json
crates/gproxy-provider-impl/src/providers/: mod.rs  oauth_common.rs
crates/gproxy-provider-impl/src/providers/aistudio/: mod.rs
crates/gproxy-provider-impl/src/providers/antigravity/: mod.rs  oauth.rs  usage.rs
crates/gproxy-provider-impl/src/providers/claude/: mod.rs
crates/gproxy-provider-impl/src/providers/claudecode/: cookie.rs  mod.rs  oauth.rs  usage.rs
crates/gproxy-provider-impl/src/providers/codex/: instructions.rs  mod.rs  models.json  oauth.rs  usage.rs
crates/gproxy-provider-impl/src/providers/custom/: mod.rs
crates/gproxy-provider-impl/tests/: upstream_usage.rs
crates/gproxy-storage/: Cargo.toml
crates/gproxy-storage/src/: bus.rs  db.rs  lib.rs  sinks.rs  snapshot.rs  storage.rs  traffic.rs
crates/gproxy-storage/src/entities/: api_keys.rs  credential_disallow.rs  credentials.rs  downstream_requests.rs  downstream_traffic.rs  events.rs  global_config.rs  internal_events.rs  mod.rs  providers.rs  upstream_requests.rs  upstream_traffic.rs  upstream_usages.rs  user_keys.rs  users.rs
crates/gproxy-storage/src/seaorm/: mod.rs
scripts/: .gitignore  e2e_curl.sh
(+198 files in other folders)
