[workspace]
resolver = "2"
members = [
  "crates/gproxy-protocol",
  "crates/gproxy-transform",
  "crates/gproxy-common",
  "crates/gproxy-provider-core",
  "crates/gproxy-provider-impl",
  "crates/gproxy-storage",
  "crates/gproxy-core",
  "crates/gproxy-router",
  "crates/gproxy-admin",
  "apps/gproxy",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["LeenHawk <leenhawk@leenhawk.com>"]
description = "A high-performance LLM proxy server written in Rust."
homepage = "https://gproxy.leenhawk.com"
repository = "https://github.com/LeenHawk/gproxy"
readme = "README.md"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
