[package]
name = "gproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
gproxy-core = { path = "../../crates/gproxy-core" }
gproxy-router = { path = "../../crates/gproxy-router" }
axum = { version = "0.8", features = ["ws"] }
rust-embed = "8"
mime_guess = "2"
