[package]
name = "gproxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
gproxy-provider-core = { path = "../gproxy-provider-core" }
gproxy-protocol = { path = "../gproxy-protocol" }
arc-swap = "1"
axum = "0.8"
bytes = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "1.0.0-rc.5"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
